# eds-sandbox

./: .gitignore  README.md
javascript/misc/: local_caching.js
python/: cloudinary_up.py  pyproject.toml
python/misc/: README.md  literals_lists.py  rich_colors.py
python/textual/: animated_splash.py  app_template.py  christmas.py  drag_container.py  mre_template.py  tictactoe.py  window.py
python/textual/common_bugs/: bug_get_screen.py  bug_query_screens.py  bug_same_widget.py
python/textual/examples/: abc_meta.py  animate_multiple.py  animate_offset.py  animated_splash.py  app_dict.py  app_loading.py  async_run.py  bug_query_screens.py  button_focus.py  button_focus_highlight.py  button_markup.py  changing_select.py  checkbox_style.py  click_container.py  click_links.py  collapsible_style.py  color_basic.py  color_logs.py  configparser_usage.py  containering.py  css_basics.py  datatable_expandcol.py  datatable_headersort.py  disappearing_tooltip.py  editable_datatable.py  escape_seq.py  events_order.py  header_clock.py  inline.py  listview_tooltips.py  loading_widget.py  loading_widget2.py  loading_with_spinner.py  logging_color.py  logging_html.py  markdown_viewer.py  markdownviewer_update.py  markup_button.py  message_control.py  mouse_capture.py  (+32 more)
python/textual/pr/: listview_index.py
python/textual/pr_ideas/: datatable_col_obj.py
textual/: tictactoe.py
textual/examples/: rich_spinner.py
